--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<div class="container">
-    <h1>Register</h1>
-    <form action="#" th:action="@{/register}" th:object="${user}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" th:field="*{username}" placeholder="Enter your username" required>
+<h1>Register User</h1>
+<form th:action="@{/user/register}" th:object="${user}" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" th:field="*{username}" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" placeholder="Enter your password" required>
+    <label for="email">Email:</label>
+    <input type="email" id="email" th:field="*{email}" required>
 
-        <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="/login">Login here</a></p>
-</div>
+    <label for="password">Password:</label>
+    <input type="password" id="password" th:field="*{password}" required>
+
+    <button type="submit">Register</button>
+</form>
 </body>
 </html>
